--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "server": "node server/index.js",
+    "build": "node server/index.js",
     "live_reload": "nodemon server/index.js"
   },
   "keywords": [],
